8/14/2023
Beginning of transition to ECS based engine fully and proper structuring of the engine API