@@ -6,6 +6,9 @@ import java.util.List;
 
 import dev.dominion.ecs.api.Dominion;
 import dev.dominion.ecs.api.Results;
+import main.engine.enginelayouts.Matrix4fLayout;
+import main.engine.enginelayouts.Vector3fLayout;
+import main.engine.enginelayouts.Vector4fLayout;
 import org.joml.Matrix4f;
 
 import crab.newton.*;
@@ -14,6 +17,8 @@ import main.engine.graphics.ModelData;
 import main.engine.items.GameItem;
 import main.engine.utility.ResourcePaths;
 import org.tinylog.Logger;
+
+import static crab.newton.Newton.*;
 
 public class Physics {
 	
@@ -34,8 +39,9 @@ public class Physics {
 		}
 	}
 	private final NewtonWorld world;
-	
+
 	public Physics() {
+		Newton.loadNewton(ResourcePaths.Newton.NEWTON_DLL);
 		world = NewtonWorld.create();
 	}
 	
@@ -43,6 +49,7 @@ public class Physics {
 		world.destroyAllMaterialGroupIDs();
 		world.destroyAllBodies();
 		world.destroy();
+		Newton.unloadNewton();
 	}
 
 	public NewtonWorld getWorld() {
@@ -61,47 +68,64 @@ public class Physics {
 		}
 	}
 	
-	public static void applyGravity(MemoryAddress bodyPtr, float timestep, int threadIndex) {
-		NewtonBody body = NewtonBody.wrap(bodyPtr);
-		float[] mass = body.getMass();
-		float[] newMass = new float[] {0f, mass[0] * GRAVITY_FORCE, 0f};
-		body.setForce(newMass);
+	public static void applyGravity(MemorySegment bodyPtr, float timestep, int threadIndex) {
+		Logger.error("Callback Body Scope: {}", bodyPtr.scope());
+		NewtonBody body = new NewtonBody(bodyPtr);
+		try (Arena arena = Arena.openConfined()) {
+			MemorySegment curMass = arena.allocate(VEC4F);
+			body.getMass(
+					curMass.asSlice(0L),
+					curMass.asSlice(C_FLOAT.byteSize()),
+					curMass.asSlice(C_FLOAT.byteSize() * 2),
+					curMass.asSlice(C_FLOAT.byteSize() * 3)
+			);
+			float force = Vector4fLayout.getX(curMass) * GRAVITY_FORCE;
+			MemorySegment forceSegment = arena.allocate(VEC3F);
+			Vector3fLayout.setY(forceSegment, force);
+			body.setForce(forceSegment);
+		}
 	}
 	
 	public NewtonBody createPrimitiveCollision(List<ModelData> modelDataList, String modelId,
-			CollisionPrimitive primitive, float[] params, float[] offsetMatrix, float mass, MemorySession session) {
+			CollisionPrimitive primitive, float[] params, float[] offsetMatrix, float mass, Arena arena) throws Throwable {
 		ModelData.Material newtonMaterial = new ModelData.Material(ResourcePaths.Textures.THIS_PIC_GOES_HARD);
 		List<ModelData.Material> newtonMaterials = new ArrayList<ModelData.Material>();
         newtonMaterials.add(newtonMaterial);
-        float[] matArr = new float[16];
-        Matrix4f matrix = new Matrix4f();
-        matrix.get(matArr);
+        MemorySegment matArr = Matrix4fLayout.identity(arena);
+		MemorySegment offMat = arena.allocateArray(C_FLOAT, offsetMatrix);
 		return switch (primitive) {
 			case BOX -> {
-				NewtonCollision collision = world.createBox(params[0], params[1], params[2], 0, offsetMatrix);
-				NewtonMesh mesh = collision.createMesh();
-				NewtonBody body = world.createDynamicBody(collision, matArr);
-				float[] inertiaOrigin = collision.calculateInertiaMatrix();
-		    	float[] origin = new float[] {inertiaOrigin[3], inertiaOrigin[4], inertiaOrigin[5]};
-		    	body.setMassMatrix(mass, mass * inertiaOrigin[0], mass * inertiaOrigin[1], mass * inertiaOrigin[2]);
-		    	body.setCenterOfMass(origin);
-		    	body.setForceAndTorqueCallback(Physics::applyGravity, session);
-		    	mesh.applyBoxMapping(0, 0, 0, matArr);
-		    	ModelData model = PhysUtils.convertToModelData(mesh, modelId, newtonMaterials);
-		    	modelDataList.add(model);
-		    	collision.destroy();
-		    	mesh.destroy();
-				yield body;
+				try (Arena pArena = Arena.openConfined()) {
+					NewtonCollision collision = world.createBox(params[0], params[1], params[2], 0, offMat);
+					NewtonMesh mesh = collision.createMesh();
+					NewtonBody body = world.createDynamicBody(collision, matArr);
+					Logger.error("Box Body Scope: {}", body.address().scope());
+					MemorySegment inertiaOrigin = pArena.allocateArray(VEC3F, 2);
+					collision.calculateInertiaMatrix(inertiaOrigin);
+					body.setMassMatrix(mass,
+							mass * inertiaOrigin.getAtIndex(C_FLOAT, 0),
+							mass * inertiaOrigin.getAtIndex(C_FLOAT, 1),
+							mass * inertiaOrigin.getAtIndex(C_FLOAT, 2));
+					body.setCenterOfMass(inertiaOrigin.asSlice(VEC3F.byteSize()));
+					body.setForceAndTorqueCallback(Physics::applyGravity, SegmentScope.global());
+					mesh.applyBoxMapping(0, 0, 0, matArr);
+					ModelData model = PhysUtils.convertToModelData(mesh, modelId, newtonMaterials);
+					modelDataList.add(model);
+					collision.destroy();
+					mesh.destroy();
+					yield body;
+				}
 			}
 			case CAPSULE -> {
 				NewtonCollision collision = world.createCapsule(params[0], params[1], params[2], 0, offsetMatrix);
 				NewtonMesh mesh = collision.createMesh();
 				NewtonBody body = world.createDynamicBody(collision, matArr);
+				Logger.error("Capsule Body Scope: {}", body.address().scope());
 				float[] inertiaOrigin = collision.calculateInertiaMatrix();
 		    	float[] origin = new float[] {inertiaOrigin[3], inertiaOrigin[4], inertiaOrigin[5]};
 		    	body.setMassMatrix(mass, mass * inertiaOrigin[0], mass * inertiaOrigin[1], mass * inertiaOrigin[2]);
 		    	body.setCenterOfMass(origin);
-		    	body.setForceAndTorqueCallback(Physics::applyGravity, session);
+		    	body.setForceAndTorqueCallback(Physics::applyGravity, SegmentScope.global());
 		    	mesh.applyCylindricalMapping(0, 0, matArr);
 		    	ModelData model = PhysUtils.convertToModelData(mesh, modelId, newtonMaterials);
 		    	modelDataList.add(model);
@@ -113,11 +137,12 @@ public class Physics {
 				NewtonCollision collision = world.createChamferCylinder(params[0], params[1], 0, offsetMatrix);
 				NewtonMesh mesh = collision.createMesh();
 				NewtonBody body = world.createDynamicBody(collision, matArr);
+				Logger.error("ChamferCylinder Body Scope: {}", body.address().scope());
 				float[] inertiaOrigin = collision.calculateInertiaMatrix();
 		    	float[] origin = new float[] {inertiaOrigin[3], inertiaOrigin[4], inertiaOrigin[5]};
 		    	body.setMassMatrix(mass, mass * inertiaOrigin[0], mass * inertiaOrigin[1], mass * inertiaOrigin[2]);
 		    	body.setCenterOfMass(origin);
-		    	body.setForceAndTorqueCallback(Physics::applyGravity, session);
+		    	body.setForceAndTorqueCallback(Physics::applyGravity, SegmentScope.global());
 		    	mesh.applyCylindricalMapping(0, 0, matArr);
 		    	ModelData model = PhysUtils.convertToModelData(mesh, modelId, newtonMaterials);
 		    	modelDataList.add(model);
@@ -129,11 +154,12 @@ public class Physics {
 				NewtonCollision collision = world.createCone(params[0], params[1], 0, offsetMatrix);
 				NewtonMesh mesh = collision.createMesh();
 				NewtonBody body = world.createDynamicBody(collision, matArr);
+				Logger.error("Cone Body Scope: {}", body.address().scope());
 				float[] inertiaOrigin = collision.calculateInertiaMatrix();
 		    	float[] origin = new float[] {inertiaOrigin[3], inertiaOrigin[4], inertiaOrigin[5]};
 		    	body.setMassMatrix(mass, mass * inertiaOrigin[0], mass * inertiaOrigin[1], mass * inertiaOrigin[2]);
 		    	body.setCenterOfMass(origin);
-		    	body.setForceAndTorqueCallback(Physics::applyGravity, session);
+		    	body.setForceAndTorqueCallback(Physics::applyGravity, SegmentScope.global());
 		    	mesh.applyBoxMapping(0, 0, 0, matArr);
 		    	ModelData model = PhysUtils.convertToModelData(mesh, modelId, newtonMaterials);
 		    	modelDataList.add(model);
@@ -145,11 +171,12 @@ public class Physics {
 				NewtonCollision collision = world.createCylinder(params[0], params[1], params[2], 0, offsetMatrix);
 				NewtonMesh mesh = collision.createMesh();
 				NewtonBody body = world.createDynamicBody(collision, matArr);
+				Logger.error("Cylinder Body Scope: {}", body.address().scope());
 				float[] inertiaOrigin = collision.calculateInertiaMatrix();
 		    	float[] origin = new float[] {inertiaOrigin[3], inertiaOrigin[4], inertiaOrigin[5]};
 		    	body.setMassMatrix(mass, mass * inertiaOrigin[0], mass * inertiaOrigin[1], mass * inertiaOrigin[2]);
 		    	body.setCenterOfMass(origin);
-		    	body.setForceAndTorqueCallback(Physics::applyGravity, session);
+		    	body.setForceAndTorqueCallback(Physics::applyGravity, SegmentScope.global());
 		    	mesh.applyCylindricalMapping(0, 0, matArr);
 		    	ModelData model = PhysUtils.convertToModelData(mesh, modelId, newtonMaterials);
 		    	modelDataList.add(model);
@@ -161,11 +188,12 @@ public class Physics {
 				NewtonCollision collision = world.createSphere(params[0], 0, offsetMatrix);
 				NewtonMesh mesh = collision.createMesh();
 				NewtonBody body = world.createDynamicBody(collision, matArr);
+				Logger.error("Sphere Body Scope: {}", body.address().scope());
 				float[] inertiaOrigin = collision.calculateInertiaMatrix();
 		    	float[] origin = new float[] {inertiaOrigin[3], inertiaOrigin[4], inertiaOrigin[5]};
 		    	body.setMassMatrix(mass, mass * inertiaOrigin[0], mass * inertiaOrigin[1], mass * inertiaOrigin[2]);
 		    	body.setCenterOfMass(origin);
-		    	body.setForceAndTorqueCallback(Physics::applyGravity, session);
+		    	body.setForceAndTorqueCallback(Physics::applyGravity, SegmentScope.global());
 		    	mesh.applySphericalMapping(0, matArr);
 		    	ModelData model = PhysUtils.convertToModelData(mesh, modelId, newtonMaterials);
 		    	modelDataList.add(model);
